# StormUrdf

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/articubot_one/share/articubot_one/: local_setup.sh  package.sh
install/articubot_one/share/articubot_one/config/: view_bot.rviz
install/articubot_one/share/articubot_one/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
install/articubot_one/share/articubot_one/launch/: view_robot.launch.py  view_robt.launch.py
launch/: launch_sim.launch.py
scripts/: arrow_teleop.py
